# zkvm

./: Cargo.toml
coset-bls12_381/: Cargo.toml
coset-bls12_381/benches/: groups.rs  hash_to_curve.rs
coset-bls12_381/src/: fp.rs  fp12.rs  fp2.rs  fp6.rs  g1.rs  g2.rs  lib.rs  pairings.rs  scalar.rs  util.rs
coset-bls12_381/src/coset/: choice.rs  mod.rs  multiscalar_mul.rs
coset-bls12_381/src/fp/: coset.rs
coset-bls12_381/src/fp2/coset/: fp2.json  mod.rs
coset-bls12_381/src/fp6/coset/: fp6.json  mod.rs
coset-bls12_381/src/g1/: coset.rs
coset-bls12_381/src/g2/: coset.rs
coset-bls12_381/src/hash_to_curve/: chain.rs  expand_msg.rs  map_g1.rs  map_g2.rs  map_scalar.rs  mod.rs
coset-bls12_381/src/pairings/coset/: g2_prepared.json  mod.rs
coset-bls12_381/src/scalar/: coset.rs
coset-bls12_381/src/tests/: mod.rs
coset-bytes/: Cargo.toml
coset-bytes/bytes/: Cargo.toml
coset-bytes/bytes/src/: errors.rs  lib.rs  parse.rs  primitive.rs  serialize.rs
coset-bytes/derive-hex/src/: lib.rs
coset-jubjub/: Cargo.toml
coset-jubjub/benches/: fq_bench.rs  fr_bench.rs  point_bench.rs
coset-jubjub/src/: coset.rs  elgamal.rs  fr.rs  lib.rs  util.rs
coset-jubjub/src/coset/: serde_support.rs
coset-jubjub/src/fr/: coset.rs
coset-merkle/: Cargo.toml
coset-merkle/src/: lib.rs  node.rs  opening.rs  tree.rs  walk.rs
coset-poseidon/: Cargo.toml
coset-poseidon/src/: encryption.rs  error.rs  hades.rs  hash.rs  lib.rs
coset-poseidon/src/encryption/: gadget.rs
coset-poseidon/src/hades/: mds_matrix.rs  permutation.rs  round_constants.rs
coset-poseidon/src/hades/permutation/: gadget.rs  scalar.rs
coset-poseidon/src/hash/: gadget.rs
merkle-plonk/: Cargo.toml  README.md
merkle-plonk/src/: batch_main.rs  lib.rs  main.rs
plonk/: Cargo.toml
plonk/src/: bit_iterator.rs  commitment_scheme.rs  compiler.rs  composer.rs  debugger.rs  error.rs  fft.rs  lib.rs  prelude.rs  proof_system.rs  runtime.rs  transcript.rs  util.rs
plonk/src/commitment_scheme/: kzg10.rs
plonk/src/commitment_scheme/kzg10/: commitment.rs  key.rs  proof.rs  srs.rs
plonk/src/compiler/: prover.rs  verifier.rs
plonk/src/composer/: circuit.rs  compress.rs  constraint_system.rs  gate.rs  permutation.rs
plonk/src/composer/compress/: hades.rs
plonk/src/composer/constraint_system/: constraint.rs  ecc.rs  witness.rs
plonk/src/composer/permutation/: constants.rs
plonk/src/fft/: domain.rs  evaluations.rs  polynomial.rs
plonk/src/proof_system/: linearization_poly.rs  preprocess.rs  proof.rs  quotient_poly.rs  widget.rs
plonk/src/proof_system/widget/: arithmetic.rs  ecc.rs  logic.rs  permutation.rs  range.rs
plonk/src/proof_system/widget/arithmetic/: proverkey.rs  verifierkey.rs
plonk/src/proof_system/widget/ecc/: curve_addition.rs  scalar_mul.rs
plonk/src/proof_system/widget/ecc/curve_addition/: proverkey.rs  verifierkey.rs
plonk/src/proof_system/widget/ecc/scalar_mul/: fixed_base.rs
plonk/src/proof_system/widget/ecc/scalar_mul/fixed_base/: proverkey.rs  verifierkey.rs
plonk/src/proof_system/widget/logic/: proverkey.rs  verifierkey.rs
plonk/src/proof_system/widget/permutation/: proverkey.rs  verifierkey.rs
plonk/src/proof_system/widget/range/: proverkey.rs  verifierkey.rs
poseidon-merkle/: Cargo.toml
poseidon-merkle/src/: lib.rs  zk.rs
