[package]
name = "coset-bls12_381"
version = "0.1.2"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dev-dependencies]
csv = ">= 1.0, < 1.2" # csv 1.2 has MSRV 1.60
criterion = "0.3"
hex = "0.4"
rand_xorshift = "0.3"
sha2 = "0.9"
sha3 = "0.9"
# Dev-dependencies added by Dusk
bincode = "1"
rkyv = {version = "0.7", default-features = false, features = ["size_32"]}
quickcheck = "1"
serde_json = "1"
rand = "0.8"

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[[bench]]
name = "hash_to_curve"
harness = false
required-features = ["experimental"]

[dependencies.digest]
version = "0.9"
optional = true

[dependencies.ff]
version = "0.13"
default-features = false

[dependencies.group]
version = "0.13"
default-features = false
optional = true

[dependencies.pairing]
version = "0.23"
optional = true

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "2"
default-features = false

[dependencies.zeroize]
version = "1"
default-features = false
optional = true

# Start of dependencies added by Dusk
[dependencies.blake2b_simd]
version = "1.0"
default-features = false

[dependencies.byteorder]
version = "1"
default-features = false
optional = true

[dependencies.rayon]
version = "1"
optional = true

[dependencies.serde]
version = "1"
default-features = false
optional = true

[dependencies.rkyv]
version = "0.7"
default-features = false
optional = true

[dependencies.bytecheck]
version = "0.6"
default-features = false
optional = true

[dependencies.coset-bytes]
path = "../coset-bytes/bytes"

[dependencies.hex]
version = "0.4"
default-features = false
optional = true
# End

[features]
default = ["groups", "pairings", "alloc", "bits", "parallel", "byteorder"]
bits = ["ff/bits"]
groups = ["group"]
pairings = ["groups", "pairing"]
alloc = ["group/alloc"]
experimental = ["digest"]
nightly = ["subtle/nightly"]
# Features added by Dusk
parallel = ["rayon"]
rkyv-impl = ["rkyv", "rkyv/alloc", "bytecheck"]
serde = ["serde/alloc", "hex/alloc"]