[package]
name = "plonk"
version = "0.21.0"
categories =["algorithms", "cryptography", "science", "mathematics"]
edition = "2021"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
license = "MPL-2.0"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    ".github/"
]

[dependencies]
merlin = {version = "3.0", default-features = false}
rand_core = {version="0.6", default-features=false}
coset-bytes = { path = "../coset-bytes/bytes", package = "coset-bytes"}
coset-bls12_381 = { path = "../coset-bls12_381", package = "coset-bls12_381", default-features = false, features = ["groups", "pairings"]}
coset-jubjub = { path = "../coset-jubjub", package = "coset-jubjub", default-features = false}
ff = {version = "0.13", default-features = false}
itertools = {version = "0.9", default-features = false}
hashbrown = {version = "0.9", default-features=false, features = ["ahash"]}
msgpacker = {version = "=0.4.8", default-features=false, features = ["alloc", "derive"], optional=true}
miniz_oxide = {version = "0.7", default-features=false, features = ["with-alloc"], optional = true}
rayon = {version = "1.3", optional = true}
sha2 = {version = "0.10", default-features = false, optional = true}
cfg-if = "1.0"
# Coset related deps for WASMI serde
rkyv = {version = "0.7", optional = true, default-features = false}
bytecheck = {version = "0.6", optional = true, default-features = false}
backtrace = {version = "0.3", optional = true}
coset_cdf = { package = "dusk-cdf", version = "0.5", optional = true }
zeroize = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.5"
tempdir = "0.3"
rand = "0.8"
rkyv = {version = "0.7", default-features = false, features = ["size_32"]}

[features]
default = ["std"]
std = [
    "rand_core/std",
    "coset-bls12_381/default",  # Includes `parallel`
    "coset-jubjub/default",
    "itertools/default",
    "hashbrown/default",
    "msgpacker/std",
    "miniz_oxide/std",
    "alloc",
    "rayon"
]
alloc = ["coset-bls12_381/alloc", "msgpacker", "miniz_oxide", "sha2"]
debug = ["coset_cdf", "backtrace"]
rkyv-impl = ["coset-bls12_381/rkyv-impl", "coset-jubjub/rkyv-impl", "rkyv", "bytecheck"]

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = false
debug = true

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
