[package]
name = "poseidon-merkle"
description = "Crate implementing Dusk Network's Merkle tree with the poseidon hash function"
version = "0.8.0"

categories = ["data-structures", "no-std"]
keywords = ["tree", "merkle", "poseidon", "data", "structure"]
repository = "https://github.com/dusk-network/merkle"
authors = [
    "Eduardo Leegwater Simões <eduardo@dusk.network>",
    "Moana Marcello <moana@dusk.network>",
]

edition = "2021"
license = "MPL-2.0"

[dependencies]
coset-bytes = { path = "../coset-bytes/bytes", package = "coset-bytes"}
coset-merkle = {path="../coset-merkle"}
coset-poseidon = {path="../coset-poseidon"}
coset-bls12_381 = { path = "../coset-bls12_381", package = "coset-bls12_381", default-features = false }
plonk = {path="../plonk", package="plonk", optional = true, default-features = false }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8"
criterion = "0.3"
ff = { version = "0.13", default-features = false }

[features]
zk = ["plonk/alloc", "coset-poseidon/zk"]
size_16 = ["rkyv/size_16"]
size_32 = ["rkyv/size_32"]
size_64 = ["rkyv/size_64"]
rkyv-impl = [
    "rkyv/validation",
    "rkyv/alloc",
    "rkyv",
    "bytecheck",
    "coset-bls12_381/rkyv-impl",
    "coset-merkle/rkyv-impl",
]